--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
-# Byte-compiled / optimized / DLL files
+#custom stuff
+*.png
+*.gif
+#
+#Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
